--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   "license": "MIT",
   "devDependencies": {
     "css-loader": "^0.25.0",
+    "file-loader": "^0.9.0",
+    "image-webpack-loader": "^3.0.0",
     "node-sass": "^3.11.2",
     "normalize.css": "^5.0.0",
     "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1"
+  },
+  "dependencies": {
+    "webpack": "^1.13.3"
   }
 }
